@@ -57,6 +57,11 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release version="42.alpha" date="2022-01-12" type="development">
+      <description>
+        <p>GTK 4 / libadwaita port</p>
+      </description>
+    </release>
     <release version="41.0" date="2021-10-17" type="stable">
       <description>
         <p>A new release of Clocks</p>
