@@ -1,3 +1,8 @@
+gnome-clocks 42.alpha
+===================
+ * Codebase is now ported to GTK 4 and Libadwaita
+ * Translations updates
+
 gnome-clocks 41.0
 ===================
  * Updated translations
